fixed entry editor animation on mobile view

--- a/asset/common/scss/layout/_list-view.scss
+++ b/asset/common/scss/layout/_list-view.scss
@@ -7,6 +7,7 @@
 
     @include breakpoint(mobile){
         overflow: visible;
+        @include transition(transform .6s);
     }
 }
 
